Started work on the level designer and finished level loading. But as always another bug emerged! 💁‍ I am confused, but I know the solution but that's for long time and for today I am done with this. Thanks everyone who can be reading this and have a great day. (Why tf do I write those paragraphs into commit messages??????)

--- a/src/main/resources/assets/lang/en_us.json
+++ b/src/main/resources/assets/lang/en_us.json
@@ -11,5 +11,6 @@
   "btn.quit": "Quit",
   "btn.back": "Back",
   "options.volume": "Volume",
-  "dev.info": "A lot of stuff may change, some aspects may not work at all. This is a development build."
+  "dev.info": "A lot of stuff may change, some aspects may not work at all. This is a development build.",
+  "menu.loading": "Loading..."
 }
